# skirm

./: Cargo.toml  DEPENDENCIES.md  LICENSE  LICENSE-MIT  README.md  project.wiki  scratch
design/: Early planning doc.wiki  index.wiki
project/: project.wiki
resources/: animations.ron  skirmers.ron  weapons.ron  weapons.yml
resources/maps/: MAP_FORMAT.md  test.skirm_map
resources/maps/test/: 0.txt  1.txt
skirm_design/: skirm_design.wiki
src/: asset_storage.rs  camera.rs  components.rs  game.rs  gui.rs  input.rs  item.rs  main.rs  map.rs  rendering.rs  resources.rs  skirmer.rs  skirmmap.rs  systems.rs  visual_effects.rs
src/components/: act.rs  equipment.rs  physics.rs  position.rs  render.rs  sound.rs  state.rs  stats.rs  turn.rs
src/gui/: mod.rs  widgets.rs
src/map/: mod.rs  point.rs  tile.rs
src/systems/: act.rs  physics.rs  plan.rs  position.rs  render.rs  sound.rs  state.rs  stats.rs
