[package]
name = "skirm"
version = "0.1.0"
authors = ["jupart <justinwpartain1@gmail.com>"]

[dependencies]
specs = "0.10.0"
specs-derive = "0.1.0"
serde_derive = "1.0.27"
serde = "1.0.27"
pathfinding = "0.6.10"
ascii = "0.8.6"
ron = "0.2.0"
line_drawing = "0.7.0"

[dependencies.ggez]
git = "https://github.com/ggez/ggez.git"
branch = "devel"
features = ["cargo-resource-root"]
